# Farkle_II

./: .gitignore  AGENTS.md  CODEX.md  Makefile  README.md  _qc_tmp.py  analysis_config.unix  analysis_files_no_shard.csv  audit_report.txt  checkpoint.pkl  cli_args.md  doc_audit.py  duplicates.txt  farkle_rules.md  filenames4.txt  leading_documentation_list.txt  mypy.ini  old_mypy.ini  py_files_in_src.txt  pyproject.toml  pyproject.toml.bak.20260327-032542  pyrightconfig.json  pytest.ini  requirements.txt  run_all_tournaments.sh  run_full_field.py  run_tournament.py  statistical_analyses.md  structure.txt  temp_patch.txt  time_farkle.py  tmp_debug.py  tmp_debug2.py  tmp_test.py  tmp_test2.py  watch_game.py
.github/workflows/: ci.yml
Notebooks/: FarkleMkII.ipynb  farkle_monte_carlo_sim.ipynb  too_many_variables.ipynb
Src/Farkle/: __init__.py  __main__.py  cli.py  engine.py  farkle_cli.py  farkle_io.py  scoring.py  scoring_lookup.py  shuffle_io.py  simulation.py  stats.py  strategies.py  throwaway.py
analysis/: README.md  rng_diagnostics.py
configs/: base.yaml  blank_config.yaml  default_config.yaml  default_config.yaml.bak  default_config.yaml.tmp  farkle_mega_config.yaml  fast_config.yaml  master_config.yaml  old_farkle_mega_config.yaml
configs/presets/: full.yaml  handcheck_pipeline.yaml
data/: Farkle_scoring_patterns.csv  farkle_all_scoring_combos.csv  farkle_missing_patterns_1.csv  farkle_scores_data.csv
docs/: branch_coverage_checklist.md  config_reference.md  data_artifacts.md  documentation_audit_review.md  human_review_checklist.md  rng_contract.md  src_documentation_backlog.md  terminology.md  test_suite_review_checklist.md  turn_and_row_contract.md
docs/codex_context/: analysis_pipeline_map.md  context_prompt.md  metadata.md  repo_map.md  statistical_methods_map.md  testing_and_review_map.md
docs/remediation/: post_fast_config_remediation_contract.md  task_5_authenticated_primitives_adoption.md
docs/reviews/: Farkle_II_post_fast_config_review.md
docs/reviews/post_fast_config/: 01_architecture_coherence.md  02_orchestration_reproducibility.md  03_simulation_data_correctness.md  04_artifact_contract.md  05_non_h2h_statistics.md  06_h2h_review.md  07_empirical_recalculation.md  08_tests_and_code_quality.md
experiments/: first_run..txt
farkle/: __init__.py
notebooks/: eight_tournaments.ipynb  far_too_many_variables.ipynb  farkle_monte_carlo_sim.ipynb  farkle_profile_2025_06-30.html  farkle_report.ipynb  farklemkII.ipynb  poking_around.ipynb  too_many_variables.ipynb
notebooks/data/: shuffles.bin.REMOVED.git-id
results_seed_0/: active_config.yaml
results_seed_14/2_players/: 2p_checkpoint.pkl
results_seed_14/2_players/rows/: manifest.jsonl  rows_125416_3569046177.parquet  rows_20612_1065490340.parquet  rows_20612_1700364725.parquet  rows_20612_2359425775.parquet  rows_20612_3111360761.parquet  rows_20612_3211804592.parquet  rows_20612_3517034396.parquet  rows_20612_3752158915.parquet  rows_20612_3928688974.parquet  rows_20612_4001224206.parquet  rows_20612_506196151.parquet  rows_20612_506218285.parquet  rows_20612_878876446.parquet  rows_20792_126559108.parquet  rows_20792_1369707362.parquet  rows_20792_1479244480.parquet  rows_20792_1948428252.parquet  rows_20792_204208476.parquet  rows_20792_2946440419.parquet  rows_20792_3991869665.parquet  rows_20792_732976604.parquet  rows_20792_853700427.parquet  rows_21728_1024228291.parquet  rows_21728_1162426539.parquet  rows_21728_190991381.parquet  rows_21728_3033577566.parquet  rows_21728_3385230481.parquet  rows_21728_3448842997.parquet  rows_21728_3536526063.parquet  rows_21728_3577184061.parquet  rows_21728_3923258210.parquet  rows_21728_785130747.parquet  rows_21728_862791731.parquet  rows_21728_950529297.parquet  rows_24504_1387665782.parquet  rows_24504_1810177274.parquet  rows_24504_2045077867.parquet  (+192 more)
scripts/: benchmark_game_stats_batch_refactor.py  check_rng_contract.py  check_structure_release.py  check_terminology.py
src/: pipeline.py
src/farkle/: __init__.py  __main__.py  aggregate.py  analysis_config.py  analysis_pipeline.py  app_config.py  checks.py  config.py  curate.py  engine.py  farkle_cli.py  farkle_io.py  ingest.py  logging_utils.py  metrics.py  pipeline.py  run_bonferroni_head2head.py  run_full_field.py  run_hgb.py  run_rf.py  run_tournament.py  run_tournament_2.py  run_trueskill.py  scoring.py  scoring_lookup.py  shuffle_io.py  simulation.py  stats.py  strategies.py  time_farkle.py  types.py  utils.py  watch_game.py
src/farkle_tmp/: engine.py
tempsss/: farklemkII.ipynb
tests/: FAILURE_NOTES.md  __init__.py  conftest.py  test_stats_wilson.py  test_watch_game.py
tests/data/: test_decide_smart_discards.csv  test_farkle_scores_data.csv
tests/helpers/: artifact_sidecars.py  config_factory.py  diagnostic_fixtures.py  golden_utils.py  metrics_samples.py
tests/integration/: test_farkle_integration.py  test_ingest_row_shards.py  test_installed_cli.py  test_metrics_stage.py  test_run_tournament_integration.py  test_structure_toy_oracle.py
tests/unit/: test_aggregate.py  test_analysis_config_git_sha.py  test_analysis_pipeline.py  test_analytics_head2head.py  test_analytics_run_all.py  test_analytics_trueskill.py  test_app_config.py  test_app_config_cli.py  test_conftest_numba.py  test_curate.py  test_engine.py  test_farkle_io.py  test_gamemetrics.py  test_hgb_feat.py  test_ingest.py  test_init.py  test_logging_utils.py  test_main_module.py  test_numba_modifications.py  test_pipeline_analytics.py  test_pipeline_frontdoor.py  test_rng_contract.py  test_run_bonferroni_head2head.py  test_run_contexts.py  test_run_full_field.py  test_run_hgb_functionality.py  test_run_hgb_helpers.py  test_run_rf_functionality.py  test_run_rf_helpers.py  test_run_tournament.py  test_run_tournament_metrics.py  test_run_trueskill_helpers.py  test_run_trueskill_pooling.py  test_scoring.py  test_scoring_lookup_validation.py  test_simulation.py  test_stats.py  test_strategies.py  test_terminology.py  test_time_farkle.py  (+3 more)
tmp_farkle/: engine.py  farkle_cli.py  simulation.py
(+255 files in other folders)
