# ── 1. Build backend ────────────────────────────────
[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

# ── 2. Core project metadata ─────────────────────────
[project]
name            = "farkle"
version         = "0.8.0"
description     = "Fast Monte Carlo simulation & strategy analysis for the dice game Farkle."
readme          = "README.md"
requires-python = ">=3.12"
authors         = [{ name = "Isaac McPadden", email = "imcpadden523@gmail.com" }]
license         = { file = "LICENSE" }                # SPDX string is fine
classifiers     = [
    "License :: OSI Approved :: Apache Software License",    # ← fixed!
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Simulation",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16",   # Parquet IO, used by ingest & analysis
    "numba>=0.59",   # JIT for the scoring engine & lookup tables
    "PyYAML>=6",     # CLI & manifest parsing
    "scipy>=1.11",   # stats helpers
    "trueskill>=0.4",
    "tqdm >=4.66",
    "freezegun>=1.5",
]

[project.optional-dependencies]
dev   = [
    "ruff>=0.5",
    "black>=24.4",
    "pytest>=8",
    "coverage[toml]>=7",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "hypothesis>=6",
    ]
viz   = ["plotly>=5.21", "panel>=1.4", "dask[dataframe]>=2024.5"]
docs  = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]

[project.scripts]
farkle = "farkle.cli.main:main"
farkle-two-seed-pipeline = "farkle.orchestration.two_seed_pipeline:main"

# ── 3. Tell Hatchling where the code lives ───────────
[tool.hatch.build.targets.wheel]
packages = ["src/farkle"]


# ── 4. Tool configs (unchanged except for testpaths) ─
[tool.ruff]
line-length    = 100
target-version = "py312"
extend-select  = ["I", "B", "C4", "SIM", "ARG", "NPY"]
unsafe-fixes   = true
src            = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402", "ARG001", "ARG002", "ARG003", "ARG005"]

[tool.black]
line-length    = 100
target-version = ["py312"]

[tool.coverage.run]
branch  = true
source  = ["src/farkle"]
omit = ["*/tests/conftest.py"]

[tool.coverage.report]
fail_under = 60
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
]

[tool.pyright]
reportMissingTypeStubs = "none"
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
files = ["src/farkle"]

[[tool.mypy.overrides]]
module = ["trueskill"]
ignore_missing_imports = true
